// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`match > matchRoutes > 0 matches 1`] = `
[
  {
    "fist": [Circular],
    "isFull": true,
    "location": "/x",
    "next": undefined,
    "params": {},
  },
]
`;

exports[`match > matchRoutes > 1 match 1`] = `
[
  {
    "fist": [Circular],
    "isFull": true,
    "location": "/",
    "next": undefined,
    "params": {},
    "route": {
      "elements": {},
      "loaded": false,
      "modules": [],
      "path": "/",
      "test": {
        "keys": [],
        "pattern": /\\^\\(\\?=\\$\\|\\\\/\\)/i,
      },
    },
  },
]
`;

exports[`match > matchRoutes > 1 match and 1 match with params 1`] = `
[
  {
    "fist": [Circular],
    "isFull": false,
    "location": "/",
    "next": {
      "fist": [Circular],
      "isFull": true,
      "location": "/abc",
      "next": undefined,
      "params": {},
      "route": {
        "elements": {},
        "loaded": false,
        "modules": [],
        "path": "/abc",
        "test": {
          "keys": [],
          "pattern": /\\^\\\\/abc\\(\\?=\\$\\|\\\\/\\)/i,
        },
      },
    },
    "params": {},
    "route": {
      "elements": {},
      "loaded": false,
      "modules": [],
      "path": "/",
      "test": {
        "keys": [],
        "pattern": /\\^\\(\\?=\\$\\|\\\\/\\)/i,
      },
      "tree": [
        {
          "elements": {},
          "loaded": false,
          "modules": [],
          "path": "/abc",
          "test": {
            "keys": [],
            "pattern": /\\^\\\\/abc\\(\\?=\\$\\|\\\\/\\)/i,
          },
        },
        {
          "elements": {},
          "loaded": false,
          "modules": [],
          "path": "/[:id]",
          "test": {
            "keys": [
              "id",
            ],
            "pattern": /\\^\\\\/\\(\\[\\^/\\]\\+\\?\\)\\(\\?=\\$\\|\\\\/\\)/i,
          },
        },
      ],
    },
  },
  {
    "fist": {
      "fist": [Circular],
      "isFull": false,
      "location": "/",
      "next": [Circular],
      "params": {},
      "route": {
        "elements": {},
        "loaded": false,
        "modules": [],
        "path": "/",
        "test": {
          "keys": [],
          "pattern": /\\^\\(\\?=\\$\\|\\\\/\\)/i,
        },
        "tree": [
          {
            "elements": {},
            "loaded": false,
            "modules": [],
            "path": "/abc",
            "test": {
              "keys": [],
              "pattern": /\\^\\\\/abc\\(\\?=\\$\\|\\\\/\\)/i,
            },
          },
          {
            "elements": {},
            "loaded": false,
            "modules": [],
            "path": "/[:id]",
            "test": {
              "keys": [
                "id",
              ],
              "pattern": /\\^\\\\/\\(\\[\\^/\\]\\+\\?\\)\\(\\?=\\$\\|\\\\/\\)/i,
            },
          },
        ],
      },
    },
    "isFull": true,
    "location": "/abc",
    "next": undefined,
    "params": {},
    "route": {
      "elements": {},
      "loaded": false,
      "modules": [],
      "path": "/abc",
      "test": {
        "keys": [],
        "pattern": /\\^\\\\/abc\\(\\?=\\$\\|\\\\/\\)/i,
      },
    },
  },
]
`;

exports[`match > matchRoutes > 1 match with params 1`] = `
[
  {
    "fist": [Circular],
    "isFull": true,
    "location": "/100",
    "next": undefined,
    "params": {
      "id": "100",
    },
    "route": {
      "elements": {},
      "loaded": false,
      "modules": [],
      "path": "/[:id]",
      "test": {
        "keys": [
          "id",
        ],
        "pattern": /\\^\\\\/\\(\\[\\^/\\]\\+\\?\\)\\(\\?=\\$\\|\\\\/\\)/i,
      },
    },
  },
]
`;

exports[`match > matchRoutes > 2 matches 1`] = `
[
  {
    "fist": [Circular],
    "isFull": false,
    "location": "/",
    "next": {
      "fist": [Circular],
      "isFull": true,
      "location": "/abc",
      "next": undefined,
      "params": {},
      "route": {
        "elements": {},
        "loaded": false,
        "modules": [],
        "path": "/abc",
        "test": {
          "keys": [],
          "pattern": /\\^\\\\/abc\\(\\?=\\$\\|\\\\/\\)/i,
        },
      },
    },
    "params": {},
    "route": {
      "elements": {},
      "loaded": false,
      "modules": [],
      "path": "/",
      "test": {
        "keys": [],
        "pattern": /\\^\\(\\?=\\$\\|\\\\/\\)/i,
      },
      "tree": [
        {
          "elements": {},
          "loaded": false,
          "modules": [],
          "path": "/abc",
          "test": {
            "keys": [],
            "pattern": /\\^\\\\/abc\\(\\?=\\$\\|\\\\/\\)/i,
          },
        },
      ],
    },
  },
  {
    "fist": {
      "fist": [Circular],
      "isFull": false,
      "location": "/",
      "next": [Circular],
      "params": {},
      "route": {
        "elements": {},
        "loaded": false,
        "modules": [],
        "path": "/",
        "test": {
          "keys": [],
          "pattern": /\\^\\(\\?=\\$\\|\\\\/\\)/i,
        },
        "tree": [
          {
            "elements": {},
            "loaded": false,
            "modules": [],
            "path": "/abc",
            "test": {
              "keys": [],
              "pattern": /\\^\\\\/abc\\(\\?=\\$\\|\\\\/\\)/i,
            },
          },
        ],
      },
    },
    "isFull": true,
    "location": "/abc",
    "next": undefined,
    "params": {},
    "route": {
      "elements": {},
      "loaded": false,
      "modules": [],
      "path": "/abc",
      "test": {
        "keys": [],
        "pattern": /\\^\\\\/abc\\(\\?=\\$\\|\\\\/\\)/i,
      },
    },
  },
]
`;
